force-app/main/default/objects/Depletion__c/Depletion__c.object-meta.xml
<CustomObject>
    <label>Depletion</label>
    <nameField>
        <displayFormat>DEP-{YYYY}{000000}</displayFormat>
        <label>Depletion #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depletions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>