force-app/main/default/objects/Depletion__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Infowelders</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>