force-app/main/default/objects/Depletion__c/fields/Account_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Account_Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Wholesaler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Wholesaler__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>China</value>
        </filterItems>
        <filterItems>
            <field>Account_Wholesaler__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Wholesaler__c</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>