force-app/main/default/objects/Depletion__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected activity is not for this account</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Promotion_Activity__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Promotion_Activity__c</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>