force-app/main/default/objects/Depletion__c/fields/Brand_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Brand_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to brand unfiltered</description>
    <label>Brand_LookUp</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Depletions (Brand_LookUp)</relationshipLabel>
    <relationshipName>Depletions1</relationshipName>
    <type>Lookup</type>
</CustomField>