force-app/main/default/objects/Depletion__c/fields/Brand_US__c.field-meta.xml
<CustomField>
    <fullName>Brand_US__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand (US)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Brand__c.eClips_Relevent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>