force-app/main/default/objects/Depletion__c/fields/Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created for Product Remediation process</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>