force-app/main/default/objects/Depletion__c/fields/DistributorGroup__c.field-meta.xml
<CustomField>
    <fullName>DistributorGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Group</label>
    <referenceTo>Distributor_Group__c</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>