force-app/main/default/objects/Depletion__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>TEXT(IF(AND(MONTH(Month_Of_Date__c) &gt;= 1, MONTH(Month_Of_Date__c) &lt;= 4), YEAR(Month_Of_Date__c), YEAR(Month_Of_Date__c) + 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>