force-app/main/default/objects/Depletion__c/fields/Month_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Of_Date__c</fullName>
    <description>Infowelders</description>
    <label>Month Of Date</label>
    <type>Date</type>
</CustomField>