force-app/main/default/objects/Depletion__c/fields/Month_Text__c.field-meta.xml
<CustomField>
    <fullName>Month_Text__c</fullName>
    <label>Month</label>
    <length>80</length>
    <type>Text</type>
</CustomField>