force-app/main/default/objects/Depletion__c/fields/Nine_L_Case__c.field-meta.xml
<CustomField>
    <fullName>Nine_L_Case__c</fullName>
    <formula>ROUND(Custom_Product__r.Case_Multiplier__c * Bottles__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is calculated by multiplying the Bottles by the Product -&gt; Case Multiplier field.</inlineHelpText>
    <label>9L Case</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>