force-app/main/default/objects/Depletion__c/fields/Planned__c.field-meta.xml
<CustomField>
    <fullName>Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when quantity fields (9L and Bottles) are Planned.</description>
    <label>Planned</label>
    <type>Checkbox</type>
</CustomField>