force-app/main/default/objects/Depletion__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Custom_Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>