force-app/main/default/objects/Depletion__c/fields/State_DG__c.field-meta.xml
<CustomField>
    <fullName>State_DG__c</fullName>
    <description>State from Distributor Group (US)</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>