force-app/main/default/objects/Depletion__c/fields/Volume9L__c.field-meta.xml
<CustomField>
    <fullName>Volume9L__c</fullName>
    <label>Volume (9L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>