force-app/main/default/objects/Depletion__c/fields/Volume_9L_Plan__c.field-meta.xml
<CustomField>
    <fullName>Volume_9L_Plan__c</fullName>
    <label>Volume (9L) Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>