force-app/main/default/objects/Depletion__c/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler</label>
    <referenceTo>Wholesaler__c</referenceTo>
    <relationshipLabel>Depletions</relationshipLabel>
    <relationshipName>Depletions</relationshipName>
    <type>Lookup</type>
</CustomField>