force-app/main/default/objects/Depletion__c/fields/Wholesaler_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Name__c</fullName>
    <formula>Wholesaler__r.Name</formula>
    <label>Wholesaler Name</label>
    <type>Text</type>
</CustomField>