force-app/main/default/objects/Depletion__c/recordTypes/Brazil.recordType-meta.xml
<RecordType>
    <fullName>Brazil</fullName>
    <active>true</active>
    <label>Brazil</label>
</RecordType>