force-app/main/default/objects/Depletion__c/recordTypes/China.recordType-meta.xml
<RecordType>
    <fullName>China</fullName>
    <active>true</active>
    <label>China</label>
</RecordType>