force-app/main/default/objects/Depletion__c/recordTypes/NAR_US.recordType-meta.xml
<RecordType>
    <fullName>NAR_US</fullName>
    <active>true</active>
    <label>NAR - US</label>
</RecordType>