force-app/main/default/objects/Depletion__c/validationRules/Activity_Wholesaler.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Wholesaler</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Wholesaler__c)), NOT(OR( Wholesaler__c = Activity__r.Wholesaler_Preferred__c ,Wholesaler__c =  Activity__r.Wholesaler_Alternate__c )))</errorConditionFormula>
    <errorMessage>Wholesaler selected not on the selected activity</errorMessage>
</ValidationRule>