force-app/main/default/objects/Depletion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nine_L_Case__c</columns>
    <columns>Account__c</columns>
    <columns>Bottles__c</columns>
    <columns>Volume9L__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>CNY</value>
    </filters>
    <label>All</label>
</ListView>