force-app/main/default/objects/Depletion__c/listViews/Taiwan_Shipment.listView-meta.xml
<ListView>
    <fullName>Taiwan_Shipment</fullName>
    <columns>Brand__c</columns>
    <columns>Custom_Product__c</columns>
    <columns>Account__c</columns>
    <columns>Bottles__c</columns>
    <columns>Month_Of_Date__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>TWD</value>
    </filters>
    <label>Taiwan Shipment</label>
    <language>en_US</language>
    <sharedTo>
        <group>TWNallusers</group>
    </sharedTo>
</ListView>