force-app/main/default/objects/Depletion__c/listViews/Temp_China.listView-meta.xml
<ListView>
    <fullName>Temp_China</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bottles__c</columns>
    <columns>Month_Of_Date__c</columns>
    <columns>Custom_Product__c</columns>
    <columns>Nine_L_Case__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Depletion__c.China</value>
    </filters>
    <label>China Monthly Depletion View</label>
    <sharedTo>
        <role>GlobalAdministrator</role>
    </sharedTo>
</ListView>